--- a/templates/sortie/detail.html.twig
+++ b/templates/sortie/detail.html.twig
@@ -70,7 +70,7 @@
         </div>
     </div>
 
-    <div style="display: flex; justify-content: space-between; margin-top: 10px">
+    <div class="list-buttons">
         {% if((participants | length) > 0) %}
         <div class="sortie-participant">
             <label> Liste des participants inscrits :  </label>
