--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="{{ asset('css/app.css') }}">
     <link rel="stylesheet" href="{{ asset('css/form.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/menu.css') }}">
     <link rel="stylesheet" href="{{ asset('css/sortie_detail.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
@@ -26,27 +27,38 @@
         <a class="site-title" href="{{ path('home') }}" title="Sortir.com | Accueil">
             <img src="{{ asset('img/logo.png') }}" alt="Sortir.com logo">
         </a>
-        <nav>
-            <ul>
-                <li><a href="{{ path("home") }}" title="Sortir.com | Accueil">Accueil</a></li>
+        <div id="hamburger">
+            <div id="hamburger-content">
+                <nav>
+                    <ul>
+                        <li><a href="{{ path("home") }}" title="Sortir.com | Accueil"><i class="fas fa-home"></i> Accueil</a></li>
 
-                {% if is_granted("IS_AUTHENTICATED_REMEMBERED")  %}
-                    <li><a href="{{ path("monProfil") }}" title="Mon profil">Mon profil</a></li>
-                    {#<li><a href="{{ path("sortie_creer") }}" title="Créer sortie">Créer une sortie</a></li>#}
-                    {#<li>Bonjour {{ app.user.prenom }} !</li>#}
+                        {% if is_granted("IS_AUTHENTICATED_REMEMBERED")  %}
+                            <li><a href="{{ path("monProfil") }}" title="Mon profil"><i class="fas fa-user"></i> Mon profil</a></li>
+                            {#<li><a href="{{ path("sortie_creer") }}" title="Créer sortie">Créer une sortie</a></li>#}
+                            {#<li>Bonjour {{ app.user.prenom }} !</li>#}
 
-                    {% if is_granted("ROLE_ADMIN") %}
-                        <li><a href="{{ path("register") }}" title="Créer compte">Créer un compte</a></li>
-                        <li><a href="#" title="Ville">Ville</a></li>
-                        <li><a href="#" title="Campus">Campus</a></li>
-                    {% endif %}
+                            {% if is_granted("ROLE_ADMIN") %}
+                                <li><a href="{{ path("register") }}" title="Créer compte"><i class="fas fa-plus"></i> Créer un compte</a></li>
+                                <li><a href="#" title="Ville">Ville</a></li>
+                                <li><a href="#" title="Campus">Campus</a></li>
+                            {% endif %}
 
-                    <li><a href="{{ path("logout") }}" title="Deconnexion">D&eacute;connexion</a></li>
-                {% else %}
-                    <li><a href="{{ path("login") }}" title="Connexion">Connexion</a></li>
-                {% endif %}
-            </ul>
-        </nav>
+                            <li><a href="{{ path("logout") }}" title="Deconnexion"><i class="fas fa-sign-out-alt"></i> D&eacute;connexion</a></li>
+                        {% else %}
+                            <li><a href="{{ path("login") }}" title="Connexion"><i class="fas fa-sign-in-alt"></i> Connexion</a></li>
+                        {% endif %}
+                    </ul>
+                </nav>
+            </div>
+            <button id="hamburger-button">&#9776;</button>
+            <div id="hamburger-sidebar">
+                <div id="hamburger-sidebar-header"></div>
+                <div id="hamburger-sidebar-body"></div>
+                <div id="hamburger-sidebar-footer"><p>© {{ "now"|date("Y") }} Sortir.com</p></div>
+            </div>
+            <div id="hamburger-overlay"></div>
+        </div>
         {% endblock %}
     </header>
 
@@ -75,6 +87,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment-with-locales.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/js/bootstrap-datetimepicker.min.js"></script>
+<script  type="text/javascript" src="{{ asset('js/burger-menu.js') }}"></script>
 <script type="text/javascript">
     $(function() {
         $('.js-datepicker').datetimepicker({
