--- a/templates/sortie/liste.html.twig
+++ b/templates/sortie/liste.html.twig
@@ -103,17 +103,17 @@
                         <td>
                             <u><a href="{{ path("sortie_detail", {'id':sortie.id}) }}">Afficher</a></u>
                             {% if  app.user in sortie.participantsP and sortie.etat.libelle == "Ouverte"%}
-                                <u><a href="{{ path("sortie_desinscription", {'id':sortie.id}) }}"> - Se d&eacute;sister</a></u>
+                                - <u><a href="{{ path("sortie_desinscription", {'id':sortie.id}) }}">Se d&eacute;sister</a></u>
                             {% endif %}
                             {% if app.user not in sortie.participantsP and sortie.etat.libelle == "Ouverte"%}
-                                <u><a href="{{ path("sortie_inscription", {'id':sortie.id}) }}"> - S'inscrire</a></u>
+                                - <u><a href="{{ path("sortie_inscription", {'id':sortie.id}) }}">S'inscrire</a></u>
                             {% endif %}
                             {% if (app.user.administrateur or app.user == sortie.participantO) and ( sortie.etat.libelle == "Ouverte" or sortie.etat.libelle == "Créée") and sortie.dateDebut > "now"|date("Y/m/d") %}
                                 <u><a href="{{ path("sortie_modifier", {'id':sortie.id}) }}">Modifier</a></u>
-                                <u><a href="{{ path("sortie_annuler", {'id':sortie.id}) }}" > - Annuler</a></u>
+                                - <u><a href="{{ path("sortie_annuler", {'id':sortie.id}) }}" >Annuler</a></u>
                             {% endif %}
                             {% if (app.user.administrateur or app.user == sortie.participantO) and sortie.etat.libelle == "Créée" %}
-                                <u><a href="{{ path("sortie_publication", {'id':sortie.id}) }}"> - Publier</a></u>
+                                - <u><a href="{{ path("sortie_publication", {'id':sortie.id}) }}">Publier</a></u>
                             {% endif %}
                         </td>
                     </tr>
