--- a/public/css/app.css
+++ b/public/css/app.css
@@ -261,3 +261,8 @@ form ul > li {
 .profil .row label {
     font-weight: bold;
 }
+
+.listParticipant {
+    display: flex;
+    justify-content: space-between;
+}
