--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="{{ asset('css/app.css') }}">
     <link rel="stylesheet" href="{{ asset('css/form.css') }}">
     <link rel="stylesheet" href="{{ asset('css/menu.css') }}">
-    <link rel="stylesheet" href="{{ asset('css/ville.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/ville_campus.css') }}">
     <link rel="stylesheet" href="{{ asset('css/sortie_detail.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
@@ -44,13 +44,13 @@
                                         <li><a href="{{ path("monProfil") }}" title="Mon profil"><i class="fas fa-user"></i> Mon profil</a></li>
                                         <li><a href="{{ path("register") }}" title="Créer compte"><i class="fas fa-plus"></i> Créer un compte</a></li>
                                         <li><a href="{{ path("ajoutMultiple") }}" title="Ajout par CSV">Création multiple</a></li>
-                                        <li><a href="{{ path("allparticipants") }}" title="Liste des participants"><i class="fas fa-users"></i>Liste des participants</a></li>
+                                        <li><a href="{{ path("allparticipants") }}" title="Liste des participants"><i class="fas fa-users"></i> Liste des participants</a></li>
                                     </ul>
                                 </li>
                                 <li><a href="{{ path("ville") }}" title="Ville"><i class="fas fa-city"></i> Ville</a></li>
 {#                                <li><a href="#" style="display:block;width:120px; height:30px;" onclick="document.getElementById('inputfile').click()">Ajout par CSV</a></li>#}
 {#                                <input type='file' id="inputfile" name="inputfile" style="display:none">#}
-                                <li><a href="#" title="Campus"><i class="fas fa-school"></i>Campus</a></li>
+                                <li><a href="{{ path("campus") }}" title="Campus"><i class="fas fa-school"></i> Campus</a></li>
                                 {% else %}
                                     <li><a href="{{ path("monProfil") }}" title="Mon profil"><i class="fas fa-user"></i> Mon profil</a></li>
                             {% endif %}
