--- a/templates/sortie/add.html.twig
+++ b/templates/sortie/add.html.twig
@@ -9,6 +9,7 @@
     <div class="form-button">
         <button type="submit" class="btn btn-primary">Valider</button>
         <button type="reset" class="btn btn-secondary">Effacer</button>
+{#        <a href=""><button type="button" class="btn btn-secondary">Nouveau lieu</button></a>#}
     </div>
     {{ form_end(sortieForm) }}
 {% endblock %}
