--- a/templates/user/login.html.twig
+++ b/templates/user/login.html.twig
@@ -29,6 +29,9 @@
                 <input type="checkbox" id="remember_me" name="_remember_me" checked/>
                 <label for="remember_me" class="form-check-inline">Se souvenir de moi</label>
             </div>
+            <div>
+                <u><a href="{{ path('app_forgotten_password') }}">Mot de passe oublié</a></u>
+            </div>
         </div>
     </form>
 {% endblock %}
