--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -43,7 +43,7 @@
                                     <ul class="gestion_user">
                                         <li><a href="{{ path("monProfil") }}" title="Mon profil"><i class="fas fa-user"></i> Mon profil</a></li>
                                         <li><a href="{{ path("register") }}" title="Créer compte"><i class="fas fa-plus"></i> Créer un compte</a></li>
-                                        <li><a href="{{ path("ajoutMultiple") }}" title="Ajout par CSV">Création multiple</a></li>
+                                        <li><a href="{{ path("ajoutMultiple") }}" title="Ajout par CSV"><i class="fas fa-folder-plus"></i> Création multiple</a></li>
                                         <li><a href="{{ path("allparticipants") }}" title="Liste des participants"><i class="fas fa-users"></i> Liste des participants</a></li>
                                     </ul>
                                 </li>
