--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -99,6 +99,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment-with-locales.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/js/bootstrap-datetimepicker.min.js"></script>
 <script  type="text/javascript" src="{{ asset('js/burger-menu.js') }}"></script>
+<script  type="text/javascript" src="{{ asset('js/script.js') }}"></script>
 <script type="text/javascript">
     $(function() {
         $('.js-datepicker').datetimepicker({
